force-app/main/default/objects/Seed_Tracking__c/Seed_Tracking__c.object-meta.xml
<CustomObject>
    <label>Seed Track</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Seed Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seed Tracks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>