force-app/main/default/objects/Seed_Tracking__c/fields/Approved_Manual_ETA__c.field-meta.xml
<CustomField>
    <fullName>Approved_Manual_ETA__c</fullName>
    <label>Approved Manual ETA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>