force-app/main/default/objects/Seed_Tracking__c/fields/Approved_Manual_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Manual_Status__c</fullName>
    <label>Approved Manual Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>