force-app/main/default/objects/Seed_Tracking__c/fields/Avion_Barco__c.field-meta.xml
<CustomField>
    <fullName>Avion_Barco__c</fullName>
    <label>Avion/Barco</label>
    <length>20</length>
    <type>Text</type>
</CustomField>