force-app/main/default/objects/Seed_Tracking__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Variety</label>
    <length>15</length>
    <type>Text</type>
</CustomField>