force-app/main/default/objects/Seed_Tracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Shipping Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>