force-app/main/default/objects/Seed_Tracking__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>Ship_To_Street__c + &quot; - &quot; + Ship_To_City__c + &quot; - &quot; + State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>