force-app/main/default/objects/Seed_Tracking__c/fields/Delivery_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_SAP_ID__c</fullName>
    <label>Delivery SAP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>