force-app/main/default/objects/Seed_Tracking__c/fields/ETA_Customer__c.field-meta.xml
<CustomField>
    <fullName>ETA_Customer__c</fullName>
    <label>ETA Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>