force-app/main/default/objects/Seed_Tracking__c/fields/ETA_USA__c.field-meta.xml
<CustomField>
    <fullName>ETA_USA__c</fullName>
    <label>ETA USA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>