force-app/main/default/objects/Seed_Tracking__c/fields/Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Flow_Status__c</fullName>
    <label>Flow Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>