force-app/main/default/objects/Seed_Tracking__c/fields/GDM_Variety_Code__c.field-meta.xml
<CustomField>
    <fullName>GDM_Variety_Code__c</fullName>
    <label>GDM Variety Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>