force-app/main/default/objects/Seed_Tracking__c/fields/GID__c.field-meta.xml
<CustomField>
    <fullName>GID__c</fullName>
    <label>GID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>