force-app/main/default/objects/Seed_Tracking__c/fields/Harvest__c.field-meta.xml
<CustomField>
    <fullName>Harvest__c</fullName>
    <label>Harvest</label>
    <length>15</length>
    <type>Text</type>
</CustomField>