force-app/main/default/objects/Seed_Tracking__c/fields/Invoice_SAP_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_SAP_Item__c</fullName>
    <label>Invoice_SAP_Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>