force-app/main/default/objects/Seed_Tracking__c/fields/Manual_ETA__c.field-meta.xml
<CustomField>
    <fullName>Manual_ETA__c</fullName>
    <label>Manual ETA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>