force-app/main/default/objects/Seed_Tracking__c/fields/Manual_Quantity_by_140K__c.field-meta.xml
<CustomField>
    <fullName>Manual_Quantity_by_140K__c</fullName>
    <label>Manual Quantity by 140K</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>