force-app/main/default/objects/Seed_Tracking__c/fields/Opp_Product_SFID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_SFID__c</fullName>
    <formula>CASESAFEID(Opportunity_Product__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Product SFID</label>
    <type>Text</type>
</CustomField>