force-app/main/default/objects/Seed_Tracking__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Seed Tracks</relationshipLabel>
    <relationshipName>Seed_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>