force-app/main/default/objects/Seed_Tracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>40</length>
    <type>Text</type>
</CustomField>