force-app/main/default/objects/Seed_Tracking__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <formula>Sale_Order__r.Owner.LastName</formula>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>