force-app/main/default/objects/Seed_Tracking__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>