force-app/main/default/objects/Seed_Tracking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Seed Tracks</relationshipLabel>
    <relationshipName>Seed_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>