force-app/main/default/objects/Seed_Tracking__c/fields/Quantity_by_140k__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_140k__c</fullName>
    <label>Quantity by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>