force-app/main/default/objects/Seed_Tracking__c/fields/Quantity_by_140k_in_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_140k_in_Delivery__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity by 140k in Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>