force-app/main/default/objects/Seed_Tracking__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsable</label>
    <length>15</length>
    <type>Text</type>
</CustomField>