force-app/main/default/objects/Seed_Tracking__c/fields/Rotulos__c.field-meta.xml
<CustomField>
    <fullName>Rotulos__c</fullName>
    <label>Rotulos</label>
    <length>5</length>
    <type>Text</type>
</CustomField>