force-app/main/default/objects/Seed_Tracking__c/fields/Sale_Order__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Seed Tracks</relationshipLabel>
    <relationshipName>Seed_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>