force-app/main/default/objects/Seed_Tracking__c/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <label>Ship To Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>