force-app/main/default/objects/Seed_Tracking__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Seed Tracks</relationshipLabel>
    <relationshipName>Seed_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>