force-app/main/default/objects/Seed_Tracking__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Shipping Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>