force-app/main/default/objects/Seed_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Brand__c</columns>
    <columns>Active__c</columns>
    <columns>ETA_Customer__c</columns>
    <columns>Quantity_by_140k__c</columns>
    <columns>Approved_Manual_ETA__c</columns>
    <columns>Approved_Manual_Quantity_by_140K__c</columns>
    <columns>Approved_Manual_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Warehouse__c</columns>
    <columns>Opp_Product_SFID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>